--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -80,10 +80,12 @@
 .__navbar-nav > .active-link .nav-link {
     border-bottom: 2px solid #18405b;
 }
+.__navbar-nav > .active-link .nav-link:hover {
+    border-bottom: 2px solid white;
+}
 
-.nav-link:focus,
-.nav-link:hover {
-    color: white;
+.__navbar-nav .nav-link:hover {
+    color: white !important;
 }
 
 .__nav-title {
