--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -119,7 +119,7 @@
         font-weight: bold;
         letter-spacing: 0.5rem;
     }
-    
+
     .__nav-text-subtitle {
         margin-bottom: 0;
         font-size: calc(0.1rem + 0.8vw);
@@ -151,6 +151,14 @@
 }
 
 /* custom style for header */
+.bg-odd {
+    background: rgba(0, 8, 255, 0.5);
+}
+
+.bg-even {
+    background: rgba(255, 111, 0, 0.5);
+}
+
 .container-overlay {
     position: relative;
     width: 100%;
