some adjustment in popover

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,6 +2,14 @@ body {
     font-family: "Poppins";
 }
 
+.popover #popover-title {
+    font-size: calc(0.5rem + 1vw);
+}
+
+.popover .list-group-item {
+    font-size: calc(0.7rem + 0.4vw);
+}
+
 /* custom style for navbar */
 .__navbar-brand {
     text-align: center;
@@ -224,6 +232,14 @@ body {
 
 /* BS lg breakpoint */
 @media (min-width: 992px) {
+    .popover #popover-title {
+        font-size: calc(0.9rem + 0.3vw);
+    }
+
+    .popover .list-group-item {
+        font-size: calc(0.8rem + 0.1vw);
+    }
+
     /* for navbar */
     .__navbar-nav .nav-link {
         color: black;
