--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -144,13 +144,38 @@ body {
     border-bottom: 10px solid #18405b;
 }
 
+
 /* custom style for news */
 .img-zoom-hover img {
-    transition: all 1s ease-in-out;
-    width: 100%;
+  transition: all 1s ease-in-out;
+  width: 100%;
 }
 .img-zoom-hover:hover img {
+  transform: scale(1.2, 1.2);
+}
+
+.__img-news img {
+    transition: all 1s ease-in-out;
+}
+.__img-news:hover img {
     transform: scale(1.2, 1.2);
+}
+
+.__img-news{
+  width: 100%;
+  height: 350px;
+}
+.__img-news img{
+  width: 100%;
+  height: auto;
+}
+
+@supports(object-fit: cover){
+    .__img-news img{
+      height: 100%;
+      object-fit: cover;
+      object-position: center center;
+    }
 }
 
 /* custom style for mitra */
@@ -383,6 +408,10 @@ body {
 
     .__referensi {
       font-size: calc(1rem + 2vw);
+    }
+
+    .__img-news{
+      height: 200px;
     }
 
     @keyframes scroll2 {
